--- a/Messaging-app/Base.lproj/Main.storyboard
+++ b/Messaging-app/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -411,6 +412,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
+                        <segue destination="GZ2-6D-n4b" kind="relationship" relationship="viewControllers" id="59r-AI-20A"/>
                         <segue destination="DmE-Bf-aqp" kind="relationship" relationship="viewControllers" id="Kyb-n9-V5H"/>
                         <segue destination="GGn-uG-75T" kind="relationship" relationship="viewControllers" id="d8b-P3-kgm"/>
                     </connections>
@@ -418,6 +420,41 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GJ2-Kv-A0E" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1507" y="122"/>
+        </scene>
+        <!--Feed Collection View Controller-->
+        <scene sceneID="iUo-9n-Vrx">
+            <objects>
+                <collectionViewController id="UHf-8b-IcQ" customClass="FeedCollectionViewController" customModule="Messaging_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="nwF-rE-drF">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wmv-yb-lr3">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="i9A-Ve-vn8">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Ty7-6y-XcS">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </collectionViewCellContentView>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="UHf-8b-IcQ" id="8vq-Ja-T4O"/>
+                            <outlet property="delegate" destination="UHf-8b-IcQ" id="IQg-wz-HaG"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="Jks-UX-AUw"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qXe-hK-Liw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3473.913043478261" y="-1011.1607142857142"/>
         </scene>
         <!--Message-->
         <scene sceneID="cPJ-Hj-Boi">
@@ -811,10 +848,30 @@
             </objects>
             <point key="canvasLocation" x="2576.811594202899" y="598.66071428571422"/>
         </scene>
+        <!--Item-->
+        <scene sceneID="8AJ-qa-9jr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GZ2-6D-n4b" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" image="home_selected" id="PsG-oY-rFO"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xy3-qY-mw4">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="UHf-8b-IcQ" kind="relationship" relationship="rootViewController" id="8X7-dw-cmZ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VJ7-tD-YGA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2563.768115942029" y="-1011.1607142857142"/>
+        </scene>
     </scenes>
     <resources>
         <image name="avatarPlaceholder" width="101" height="101"/>
         <image name="comment" width="22" height="19"/>
+        <image name="home_selected" width="22" height="22"/>
         <image name="settings" width="25" height="25"/>
     </resources>
 </document>
