--- a/Messaging-app/Base.lproj/Main.storyboard
+++ b/Messaging-app/Base.lproj/Main.storyboard
@@ -775,7 +775,7 @@
         <!--Edit User View Controller-->
         <scene sceneID="yTq-He-Gla">
             <objects>
-                <viewController id="DLH-Fj-L5A" customClass="EditUserViewController" customModule="Messaging_app" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EditVC" id="DLH-Fj-L5A" customClass="EditUserViewController" customModule="Messaging_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="XsL-iY-6MP">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
